<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.tools.ToolsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_tools"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2"
        android:rowCount="2"
        android:useDefaultMargins="true">

        <com.pabsdl.tourista.view.toolitemview.ToolItemView
            android:id="@+id/toolsCurrencyConversionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            app:buttonText="@string/menu_currency_conversion"
            app:srcImage="@drawable/ic_attach_money_black_24dp"/>

        <com.pabsdl.tourista.view.toolitemview.ToolItemView
            android:id="@+id/toolsVisaInformationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            app:buttonText="@string/menu_visa_information"
            app:srcImage="@drawable/ic_library_books_black_24dp"/>

    </GridLayout>


</LinearLayout>