<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_rounded_top"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".feature.currencyconverter.CurrencyConverterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/currency_base_amount"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:layout_marginStart="8dp"
            android:background="@drawable/shape_rounded_left"
            android:textColor="@android:color/white"
            android:text="@string/currency_convert"/>

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape_rounded_right"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            app:srcCompat="@drawable/ic_launcher_foreground"/>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/currency_target_amount"
                android:enabled="false"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>