<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.pabsdl.tourista.feature.visainformation.VisaInformationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.visainformation.VisaInformationFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/visaCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            style="@style/CardViewThemeDefault"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/visaCardLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/visaPassportText"
                        style="@style/NoBlankEditTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/visa_passport"
                        android:editable="false"
                        android:text="@{viewModel.passportCountry}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/visaDestinationText"
                        style="@style/NoBlankEditTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/visa_destination"
                        android:editable="false"
                        android:text="@{viewModel.destinationCountry}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            style="@style/CardViewThemeDefault"
            app:layout_constraintTop_toBottomOf="@id/visaCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:visaInfo="@{viewModel.visaInfo}"/>

                <Button
                    android:id="@+id/visaReqsSearchButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_rounded_bottom_small"
                    android:textColor="@android:color/white"
                    android:text="@string/visa_reqs_search"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>